2003-02-11  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/svg/render_svg.c: 
	* lib/diasvgrenderer.c: Fixed numeric localized output issues.

2003-02-10  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/SADT/arrow.c (sadtarrow_draw): Clamp cosa, cosb to 
	[-1.0, 1.0].  Shouldn't be necessary, but in some cases the
	side of the triangle is longer than the hypotenuse.  Rounding
	error suspected.

2003-02-09  Lars Clausen  <lrclause@cs.uiuc.edu>

	* NEWS: 
	* configure.in: 
	* doc/en/dia-manual.sgml: Update for pre2.

	* app/menus.c (display_menu_items): Fixed wrongly place separators.

	* objects/flowchart/box.c (box_update_data): Applied patch from
	Eivind Tagseth <eivind-gnome@multinet.no> to allow resize (with
	comment). 

	* app/paginate_psprint.c (print_page): Set paper name, so it
	convinces ps printers to use to right size.

2003-02-07  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/properties.c (properties_show): Hide the dialog if the
	object is NULL (get rid of 'no properties' randomly popping up).

2003-02-06  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/pixbuf/pixbuf.c (export_data): Adjust width and height
	for diagrams not starting at origo.

2003-02-05  Lars Clausen  <lrclause@cs.uiuc.edu>

	* dia.spec (BuildRequires): Use libxml2-devel.

	* plug-ins/pixbuf/Makefile.am: Added to CVS.

	* RELEASE-PROCESS: Note on RPM version numbers.

	* app/interface.c (create_display_shell): Don't set as toolbar
	under Unix, either.  Especially not the diagram shell.  It removes
	it from the taskbar and makes it unresizable, always-on-top with
	OpenBox.  TOOLBAR != TOOLBOX.  Setting toolbox to the only
	appropriate thing, UTILITY, is not good either, you lose resizing
	and minimizing/maximizing under OpenBox.

	* app/menus.c (display_menu_items): Set delete item to use Delete.

2003-02-04  Lars Clausen  <lrclause@cs.uiuc.edu>

	* dia.spec (BuildRequires, Requires): Updated for Gtk2
	requirements.

	* app/disp_callbacks.c (ddisplay_canvas_events): Only add a