@@ -1,12 +1,0 @@
-UML : dia-uml.xsl
-C++ = dia-uml2c++.xsl
-Java = dia-uml2java.xsl
-IDL = dia-uml2idl.xsl
-.
-
-RCM : dia-rcm.xsl
-nat = machin.xsl
-
-max = truc.xsl
-.
-
